test/src/test/k3s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: ghcr.io/kokuwaio/keycloak-angular/frontend:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: frontend
          ports:
            - name: http
              containerPort: 8080
